<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Expensive</string>
    <string name="add_task">New Expense Report</string>
    <string name="edit_task">Edit Expense Report</string>
    <string name="task_marked_complete">Expense marked approved</string>
    <string name="task_marked_active">Expense marked pending</string>
    <string name="loading_tasks_error">Error while loading expenses</string>
    <string name="completed_tasks_cleared">Approved expenses cleared</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_clear">Clear completed</string>
    <string name="menu_delete_task">Delete Expense Report</string>
    <string name="navigation_view_header_title">Expensive</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Enter your expense information here.</string>
    <string name="empty_task_message">Expense reports cannot be empty</string>
    <string name="successfully_saved_task_message">Expense report saved</string>
    <string name="list_title">Expenses List</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_no_tasks">You have no tasks.</string>
    <string name="statistics_active_tasks">Pending expenses: %d</string>
    <string name="statistics_completed_tasks">Approved expenses: %d</string>
    <string name="statistics_error">Error loading statistics.</string>
    <string name="no_data">No data</string>
    <string name="loading">LOADING</string>

    <string-array name="list_tasks_array">
        <item>@string/nav_all</item>
        <item>@string/nav_active</item>
        <item>@string/nav_completed</item>
    </string-array>
    <string name="nav_all">All</string>
    <string name="nav_active">Pending approval</string>
    <string name="nav_completed">Approved</string>
    <string name="label_all">All Expenses</string>
    <string name="label_active">Pending Expenses</string>
    <string name="label_completed">Approved Expenses</string>
    <string name="no_tasks_all">You have no expenses!</string>
    <string name="no_tasks_active">You have no pending expenses!</string>
    <string name="no_tasks_completed">You have no approved expenses!</string>
    <string name="no_tasks_add">Add an Expense Report +</string>
    <string name="refresh">Refresh</string>
    <string name="successfully_deleted_task_message">Expense report was deleted</string>
    <string name="successfully_added_task_message">Expense report added</string>
    <string name="no_data_description"/>

    <!-- login activity -->
    <string name="email_input_label">Email</string>
    <string name="loading_existing_account">Looking for an existing account…</string>
    <string name="loading_authenticating">Authenticating…</string>
    <string name="creating_account">Creating account…</string>
    <string name="sign_in_button_label">Sign in</string>
    <string name="password_input_label">Password</string>
    <string name="welcome">Welcome to Expensive</string>

    <!-- welcome activity -->
    <string name="app_explanation">Business expense tracking and approval, wherever you need it</string>
    <string name="lets_go_label">Let\'s go!</string>
    <string name="sign_in_with_password">Please sign in with your password</string>
    <string name="enter_email">What is your email address?</string>
    <string name="auth_failure">Oops, that didn\'t work. Maybe try again?</string>
    <string name="choose_password">Hey, you\'re new! Choose a password</string>
    <string name="enter_password">Welcome back! What\'s your password?</string>
    <string name="enter_password_again">Incorrect password - please try again</string>
    <string name="sign_out">Sign out</string>
</resources>
